[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Pause" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="lbl_Name" type="Label" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Pause"
align = 1
valign = 1

[node name="btn_Resume" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 220.0
margin_right = 590.0
margin_bottom = 240.0
text = "Resume"

[node name="btn_Load" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 270.0
margin_right = 590.0
margin_bottom = 290.0
text = "Load"

[node name="btn_Save" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 320.0
margin_right = 590.0
margin_bottom = 340.0
text = "Save"

[node name="btn_Options" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 370.0
margin_right = 590.0
margin_bottom = 390.0
text = "Options"

[node name="btn_Quit" type="Button" parent="Pause"]
margin_left = 440.0
margin_top = 470.0
margin_right = 590.0
margin_bottom = 490.0
text = "Quit"

